<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home1"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_search1"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/nav_add1"
        android:icon="@drawable/ic_add"
        android:title="@string/post" />
    <item
        android:id="@+id/nav_list_of_ngo"
        android:icon="@drawable/ic_list_of_ngo"
        android:title="@string/list_of_ngos" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_account"
        android:title="@string/profile" />

</menu>