<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCF0FF"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FBF9E8"
        android:id="@+id/imgView"
        android:scaleType="fitXY"
        android:scaleY="3.5"
        android:contentDescription="@string/opening"/>

    <androidx.viewpager.widget.ViewPager
        android:layout_below="@+id/imgView"
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:layout_below="@+id/view_pager"
        android:id="@+id/dotLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/view_pager"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="535dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/dotLayout"
        android:alpha=".5"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="107dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="64dp"
        android:text="@string/next"
        android:textSize="12dp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_skip"
        android:layout_width="107dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="64dp"
        android:background="@null"
        android:text="@string/skip"
        android:textSize="12dp"
        android:textColor="@android:color/white" />
    <ProgressBar
        android:id="@+id/progress_bar_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

    </ProgressBar>
</RelativeLayout>